# benchmark

./: .gitignore  CMakeLists.txt
common/trase/lib/cmake/trase/: trase-config-noconfig.cmake  trase-config.cmake
include/: plotting.h  sockets.h  stat.h  tests.h  timer.h
src/: benchmark.cpp  plotting.cpp  sockets.cpp  stat.cpp  tests.cpp
